<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listharga">

  <TextView
      android:id="@+id/judul"
      android:layout_width="410dp"
      android:layout_height="40dp"
      android:layout_marginTop="55dp"
      android:gravity="center"
      android:text="@string/list_harga"
      android:textColor="#6200EE"
      android:textSize="20sp"
      android:textStyle="bold" />

  <ImageView
      android:id="@+id/image1"
      android:layout_width="167dp"
      android:layout_height="193dp"
      android:layout_marginTop="140dp"
      android:contentDescription="@string/todo"
      android:scaleType="fitXY"
      android:alpha=".50"
      android:src="@drawable/fotosepatu1" />

  <ImageView
      android:id="@+id/image2"
      android:layout_width="167dp"
      android:layout_height="193dp"
      android:layout_marginStart="240dp"
      android:layout_marginTop="140dp"
      android:alpha=".50"
      android:contentDescription="@string/todo"
      android:scaleType="fitXY"
      android:src="@drawable/fotosepatu2" />

  <ImageView
        android:id="@+id/image3"
        android:layout_width="167dp"
        android:layout_height="193dp"
        android:layout_marginTop="371dp"
        android:alpha=".50"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        android:src="@drawable/fotosepatu3" />

  <ImageView
      android:id="@+id/image4"
      android:layout_width="167dp"
      android:layout_height="193dp"
      android:layout_marginStart="240dp"
      android:layout_marginTop="370dp"
      android:alpha=".50"
      android:contentDescription="@string/todo"
      android:scaleType="fitXY"
      android:src="@drawable/fotosepatu4"
      tools:ignore="ImageContrastCheck" />

  <TextView
      android:id="@+id/text1"
      android:layout_width="138dp"
      android:layout_height="30dp"
      android:layout_marginStart="18dp"
      android:layout_marginTop="148dp"
      android:gravity="center"
      android:text="@string/text1img3"
      android:textColor="@color/hitam"
      android:textStyle="bold"
      android:textSize="13sp"/>

  <TextView
      android:id="@+id/text2"
      android:layout_width="138dp"
      android:layout_height="70dp"
      android:layout_marginStart="17dp"
      android:layout_marginTop="190dp"
      android:gravity="center"
      android:text="@string/text2img1"
      android:textColor="@color/hitam"

      android:textSize="11sp" />

  <TextView
      android:id="@+id/text3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="18dp"
      android:layout_marginTop="270dp"
      android:gravity="center"
      android:text="@string/text3img1"
      android:textColor="@color/hitam"
      android:textSize="11sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/text4"
      android:layout_width="138dp"
      android:layout_height="30dp"
      android:layout_marginStart="255dp"
      android:layout_marginTop="148dp"
      android:gravity="center"
      android:text="@string/text1img2"
      android:textColor="@color/hitam"
      android:textSize="13sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/text5"
      android:layout_width="157dp"
      android:layout_height="101dp"
      android:layout_marginStart="243dp"
      android:layout_marginTop="181dp"
      android:gravity="center"
      android:text="@string/text2img2"
      android:textColor="@color/hitam"
      android:textSize="11sp" />

  <TextView
      android:id="@+id/text6"
      android:layout_width="138dp"
      android:layout_height="30dp"
      android:layout_marginStart="257dp"
      android:layout_marginTop="280dp"
      android:gravity="center"
      android:text="@string/text3img2"
      android:textColor="@color/hitam"
      android:textSize="11sp"
      android:textStyle="bold" />

  <TextView
        android:id="@+id/text7"
        android:layout_width="138dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="380dp"
        android:gravity="center"
        android:text="@string/text1img3"
        android:textColor="@color/hitam"
        android:textStyle="bold"
        android:textSize="13sp"/>


  <TextView
      android:id="@+id/text8"
      android:layout_width="151dp"
      android:layout_height="100dp"
      android:layout_marginStart="11dp"
      android:layout_marginTop="415dp"
      android:gravity="center"
      android:text="@string/text2img3"
      android:textColor="@color/hitam"
      android:textSize="11sp" />

  <TextView
      android:id="@+id/text9"
      android:layout_width="wrap_content"
      android:layout_height="29dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="500dp"
      android:gravity="center"
      android:text="@string/text3img3"
      android:textColor="@color/hitam"
      android:textSize="11sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/text10"
      android:layout_width="138dp"
      android:layout_height="30dp"
      android:layout_marginStart="255dp"
      android:layout_marginTop="380dp"
      android:gravity="center"
      android:text="@string/text1img4"
      android:textColor="@color/hitam"
      android:textSize="13sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/text11"
      android:layout_width="147dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="250dp"
      android:layout_marginTop="415dp"
      android:gravity="center"
      android:text="@string/text2img4"
      android:textColor="@color/hitam"
      android:textSize="11sp"
      />

  <TextView
      android:id="@+id/text12"
      android:layout_width="wrap_content"
      android:layout_height="29dp"
      android:layout_marginStart="250dp"
      android:layout_marginTop="523dp"
      android:gravity="center"
      android:text="@string/text3img4"
      android:textColor="@color/hitam"
      android:textSize="11sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/alamat1"
      android:layout_width="163dp"
      android:layout_height="30dp"
      android:layout_marginStart="120dp"
      android:layout_marginTop="600dp"
      android:gravity="center"
      android:text="@string/alamat"
      android:textColor="@color/hitam"
      android:textSize="14sp"
      android:textStyle="bold" />

  <TextView
      android:id="@+id/alamat2"
      android:layout_width="197dp"
      android:layout_height="50dp"
      android:layout_marginStart="103dp"
      android:layout_marginTop="620dp"
      android:gravity="center"
      android:text="@string/alamat1"
      android:textColor="@color/hitam"
      android:textSize="14sp" />

</RelativeLayout>
