<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hubungikami">

    <TextView
        android:id="@+id/judul"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/textjudul"
        android:textStyle="bold"
        android:textColor="#6200EE"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="320dp"
        android:background="@drawable/ic_baseline_call_24"
        android:backgroundTint="#6200EE"
        android:contentDescription="@string/todo1" />

    <Button
        android:id="@+id/btnwa"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="322dp"
        android:backgroundTint="#4CCB5A"
        android:text="@string/chat_admin"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/text"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/alamatstore"
        android:textColor="@color/hitam"
        android:textSize="15sp" />

</RelativeLayout>